# Mlops-journey

./: .envrc  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  STATUS.md  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-05-27-week-1-foundation-setup.md  2026-05-29-project-1-phase-1-data-and-xgboost.md
docs/superpowers/specs/: 2026-05-27-mlops-agentic-ai-learning-path-design.md
infra/: .env.example  docker-compose.yml  hello-world.yaml  k3d-create.sh  mlflow-entrypoint.sh  verify.sh
project-0-warmup/: README.md  pyproject.toml
project-0-warmup/notebooks/: _credit_baseline_source.py  credit_baseline.ipynb
project-0-warmup/src/credit_baseline/: __init__.py  pipeline.py
project-0-warmup/tests/: test_pipeline.py
project-1-credit-risk-pipeline/: .gitignore  README.md  pyproject.toml
project-1-credit-risk-pipeline/.dvc/: config
project-1-credit-risk-pipeline/data/: README.md
project-1-credit-risk-pipeline/data/raw/: .gitignore  german_credit.csv.dvc
project-1-credit-risk-pipeline/src/credit_risk/: __init__.py  data_loader.py  features.py  train.py
project-1-credit-risk-pipeline/tests/: test_data_loader.py  test_features.py  test_train.py
