[project]
name = "credit-baseline"
version = "0.0.1"
description = "Week-1 sklearn refresher; seed for Project 1 (credit risk)."
requires-python = ">=3.11"
dependencies = [
  "scikit-learn>=1.5",
  "pandas>=2.2",
  "numpy>=2.0",
  "mlflow>=2.16",
  "boto3>=1.34",       # MLflow S3 artifact upload (to MinIO)
  "joblib>=1.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "jupyter>=1.0",
  "ipykernel>=6.29",
  "jupytext>=1.16",    # convert .py <-> .ipynb (used Day 5)
  "nbconvert>=7.16",   # execute notebooks headlessly (used Day 5)
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/credit_baseline"]
