[project]
name = "credit-risk-pipeline"
version = "0.1.0"
description = "Project 1: Self-healing credit-risk ML pipeline (fintech domain)."
requires-python = ">=3.11"
dependencies = [
  "xgboost>=2.1",
  "scikit-learn>=1.5",
  "pandas>=2.2",
  "numpy>=2.0",
  "mlflow>=2.16,<3.0",
  "boto3>=1.34",
  "dvc[s3]>=3.55",
  "pyarrow>=17",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
]

[project.scripts]
credit-risk = "credit_risk.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/credit_risk"]
